<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16sp">

    <TextView
        android:id="@+id/tv_title_list"
        android:text="@string/passiar_com_o_cachorro"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_date_hour"
        android:text="@string/_12_04_2022_16_30"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_list"
        app:layout_constraintStart_toStartOf="@id/tv_title_list"/>

    <TextView
        android:id="@+id/tv_descriptions"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_date_hour"
        app:layout_constraintStart_toStartOf="@id/tv_date_hour"
        android:hint="@string/no_descriptins"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_more"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_more"/>


</androidx.constraintlayout.widget.ConstraintLayout>